--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/DanielYu0864/DanielYu-HomeWork-13-Node-Express-Handlebars/issues"
   },
-  "homepage": "https://github.com/DanielYu0864/DanielYu-HomeWork-13-Node-Express-Handlebars#readme"
+  "homepage": "https://github.com/DanielYu0864/DanielYu-HomeWork-13-Node-Express-Handlebars#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
+    "mysql": "^2.18.1"
+  }
 }
